core_dump_20853

 *** Break *** keyboard interrupt
[1minput_line_37:2:2: [0m[0;1;31merror: [0m[1mexpected expression[0m
 .a
[0;1;32m ^
[0m